Feats: Added Docker Compose for postgres_auction

--- a/src/Services/Auction/Auction.API/Auction.API.csproj
+++ b/src/Services/Auction/Auction.API/Auction.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>3827c52d-e169-4f54-8fec-3aa393a6e43f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
