Feats: Added Bidding.Domain and Bidding.Infrastructure

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -13,6 +13,15 @@ services:
     volumes:
       - postgres_auction:/var/lib/postgresql/data/
 
+  biddb:
+    container_name: biddb
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=SwN12345678
+    restart: always
+    ports:
+      - "1433:1433"
+
   auction.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
