--- a/src/Services/Bidding/Bidding.API/Dockerfile
+++ b/src/Services/Bidding/Bidding.API/Dockerfile
@@ -11,19 +11,19 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Services/Bid/Bid.API/Bid.API.csproj", "Services/Bid/Bid.API/"]
-RUN dotnet restore "./Services/Bid/Bid.API/Bid.API.csproj"
+COPY ["Services/Bidding/Bidding.API/Bidding.API.csproj", "Services/Bidding/Bidding.API/"]
+RUN dotnet restore "./Services/Bidding/Bidding.API/Bidding.API.csproj"
 COPY . .
-WORKDIR "/src/Services/Bid/Bid.API"
-RUN dotnet build "./Bid.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Services/Bidding/Bidding.API"
+RUN dotnet build "./Bidding.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Bid.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Bidding.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Bid.API.dll"]
+ENTRYPOINT ["dotnet", "Bidding.API.dll"]
