Feats: Added CreateBid Feature

--- a/src/Services/Bidding/Bidding.Application/Bidding.Application.csproj
+++ b/src/Services/Bidding/Bidding.Application/Bidding.Application.csproj
@@ -6,9 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
 		<ProjectReference Include="..\Bidding.Domain\Bidding.Domain.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Bids\EventHandlers\" />
 	</ItemGroup>
 
 </Project>
