Feats: Added Docker Orchestation for Bidding Service

--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -4,7 +4,8 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "auction.api": "StartDebugging"
+        "auction.api": "StartDebugging",
+        "bidding.api": "StartDebugging"
       }
     }
   }
