--- a/src/Services/Bidding/Bidding.API/Dockerfile
+++ b/src/Services/Bidding/Bidding.API/Dockerfile
@@ -1,28 +1,18 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
-# This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Services/Bidding/Bidding.API/Bidding.API.csproj", "Services/Bidding/Bidding.API/"]
-RUN dotnet restore "./Services/Bidding/Bidding.API/Bidding.API.csproj"
+RUN dotnet restore "Services/Bidding/Bidding.API/Bidding.API.csproj"
 COPY . .
 WORKDIR "/src/Services/Bidding/Bidding.API"
-RUN dotnet build "./Bidding.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "Bidding.API.csproj" -c Release -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Bidding.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Bidding.API.csproj" -c Release -o /app/publish
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
