FIx: Typo in Bidding Docker File

--- a/src/Services/Auction/Auction.API/Dockerfile
+++ b/src/Services/Auction/Auction.API/Dockerfile
@@ -4,24 +4,24 @@ WORKDIR /app
 
 # Copy the BuildingBlocks project first
 COPY src/BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj src/BuildingBlocks/BuildingBlocks/
-COPY src/Services/Auction/Auction.API/Auction.API.csproj src/Services/Auction/Auction.API/
+COPY src/Services/Bidding/Bidding.API/Bidding.API.csproj src/Services/Bidding/Bidding.API/
 
 # Restore dependencies for both projects
-RUN dotnet restore "src/Services/Auction/Auction.API/Auction.API.csproj"
+RUN dotnet restore "src/Services/Bidding/Bidding.API/Bidding.API.csproj"
 
 # Copy all source files for the entire solution
 COPY . .
 
-# Set the working directory and build the Auction.API project
-WORKDIR /app/src/Services/Auction/Auction.API
-RUN dotnet build "Auction.API.csproj" -c Release -o /app/build
+# Set the working directory and build the Bidding.API project
+WORKDIR /app/src/Services/Bidding/Bidding.API
+RUN dotnet build "Bidding.API.csproj" -c Release -o /app/build
 
 # Publish the app
 FROM build AS publish
-RUN dotnet publish "Auction.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Bidding.API.csproj" -c Release -o /app/publish
 
 # Use the ASP.NET runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Auction.API.dll"]
+ENTRYPOINT ["dotnet", "Bidding.API.dll"]
