Revert "Feats: Added Docker Orchestation for Bidding Service"
This reverts commit f74c07337a3cbbad77a5248a7ed035be45782a7d.

--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -4,8 +4,7 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "auction.api": "StartDebugging",
-        "bidding.api": "StartDebugging"
+        "auction.api": "StartDebugging"
       }
     }
   }
