Fixed: Docker biddb connection strings

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -42,6 +42,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=biddb;Database=BidDb;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True
     depends_on:
       - biddb
     ports:
