Feats: Added Message Broker (RabbitMQ)

--- a/src/Services/Auction/Auction.API/Auction.API.csproj
+++ b/src/Services/Auction/Auction.API/Auction.API.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Messaging\BuildingBlocks.Messaging.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
   </ItemGroup>
 
