--- a/src/Services/Auction/Auction.API/Dockerfile
+++ b/src/Services/Auction/Auction.API/Dockerfile
@@ -12,6 +12,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Services/Auction/Auction.API/Auction.API.csproj", "Services/Auction/Auction.API/"]
+COPY ["BuildingBlocks/BuildingBlocks.Messaging/BuildingBlocks.Messaging.csproj", "BuildingBlocks/BuildingBlocks.Messaging/"]
 COPY ["BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/BuildingBlocks/"]
 RUN dotnet restore "./Services/Auction/Auction.API/Auction.API.csproj"
 COPY . .
