--- a/src/Services/Bidding/Bidding.API/Dockerfile
+++ b/src/Services/Bidding/Bidding.API/Dockerfile
@@ -13,6 +13,7 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Services/Bidding/Bidding.API/Bidding.API.csproj", "Services/Bidding/Bidding.API/"]
 COPY ["Services/Bidding/Bidding.Application/Bidding.Application.csproj", "Services/Bidding/Bidding.Application/"]
+COPY ["BuildingBlocks/BuildingBlocks.Messaging/BuildingBlocks.Messaging.csproj", "BuildingBlocks/BuildingBlocks.Messaging/"]
 COPY ["BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/BuildingBlocks/"]
 COPY ["Services/Bidding/Bidding.Domain/Bidding.Domain.csproj", "Services/Bidding/Bidding.Domain/"]
 COPY ["Services/Bidding/Bidding.Infrastructure/Bidding.Infrastructure.csproj", "Services/Bidding/Bidding.Infrastructure/"]
