--- a/src/Services/Bidding/Bidding.Application/Bidding.Application.csproj
+++ b/src/Services/Bidding/Bidding.Application/Bidding.Application.csproj
@@ -11,12 +11,13 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Messaging\BuildingBlocks.Messaging.csproj" />
 		<ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
 		<ProjectReference Include="..\Bidding.Domain\Bidding.Domain.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Bids\EventHandlers\" />
+	  <Folder Include="Bids\EventHandlers\Domain\" />
 	</ItemGroup>
 
 </Project>
