--- a/src/Services/Auction/Auction.API/Auction.API.csproj
+++ b/src/Services/Auction/Auction.API/Auction.API.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Auctions\GetAuctionByCategory\" />
+  </ItemGroup>
+
 </Project>
