Feats: Added consistent Hashing Based on Auction ID

--- a/k8s/auction-service-deployment.yaml
+++ b/k8s/auction-service-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auction-service
-          image: auction-service:latest
-          imagePullPolicy: IfNotPresent
+          image: auctionapi:latest
+          imagePullPolicy: Never
           ports:
             - containerPort: 8080
