--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -37,6 +37,18 @@ services:
     ports:
       - "1434:1433"
 
+  contractdb:
+    container_name: contractdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=ContractDb
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_contract:/var/lib/postgresql/data/
+
   messagebroker:
     container_name: messagebroker
     hostname: bidding-mq
@@ -103,6 +115,25 @@ services:
     ports:
       - "6004:8080"
       - "6064:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  biddingresult.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=contractdb;Port=5432;Database=ContractDb;User Id=postgres;Password=postgres;Include Error Detail=true
+      - MessageBroker__Host=amqp://bidding-mq:5672
+      - MessageBroker__UserName=guest
+      - MessageBroker__Password=guest
+    depends_on:
+      - contractdb
+      - messagebroker
+    ports:
+      - "6003:8080"
+      - "6063:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
