--- a/k8s/bidding-service-deployment.yaml
+++ b/k8s/bidding-service-deployment.yaml
@@ -17,4 +17,7 @@ spec:
           image: biddingapi:latest
           imagePullPolicy: Never
           ports:
-            - containerPort: 5000
+            - containerPort: 5001
+          env:
+            - name: ASPNETCORE_URLS
+              value: "http://+:5001"  # Ensure ASP.NET listens on 5001
