--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+#version: '3.4'
 
 services:
   auctiondb:
@@ -47,6 +47,19 @@ services:
     # environment:
     # - ASPNETCORE_URLS=http://+:5001
     # - ASPNETCORE_ENVIRONMENT=Development
+
+  ml-service:
+    build:
+      context: ./Services/MLService             
+      dockerfile: Dockerfile                    
+    container_name: ml_service
+    ports:
+      - "5002:8080"                               
+    # environment:
+    #   - ASPNETCORE_ENVIRONMENT=Development     
+    volumes:
+      - ./Services/MLService/ML/Models:/app/ML/Models  # Mounts the Models directory to persist the model file
+
 
 
 
