Feats: Added model for predictions, set up database to store prediction results and added additional endpoints to retrieve saved predictions

--- a/src/Services/MLService/appsettings.json
+++ b/src/Services/MLService/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3307;Database=MachineLearningDB;User=User1;Password=User123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
