--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -55,13 +55,11 @@ services:
     container_name: ml_service
     ports:
       - "5002:8080"                               
-    # environment:
-    #   - ASPNETCORE_ENVIRONMENT=Development     
+    environment:
+       - ASPNETCORE_ENVIRONMENT=Development   
+       - ConnectionStrings__DefaultConnection=Server=host.docker.internal;Port=3307;Database=MachineLearningDB;User=User1;Password=User123; 
     volumes:
       - ./Services/MLService/ML/Models:/app/ML/Models  # Mounts the Models directory to persist the model file
-
-
-
 
   biddingresult.api:
     image: ${DOCKER_REGISTRY-}biddingresultapi
