--- a/src/Services/MLService/MLService.csproj
+++ b/src/Services/MLService/MLService.csproj
@@ -18,6 +18,9 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="KubernetesClient" Version="15.0.1" />
+
+
   </ItemGroup>
 
 </Project>
