Fix: Docker compose db port

--- a/src/Services/BiddingNotification/BiddingNotification.API/appsettings.json
+++ b/src/Services/BiddingNotification/BiddingNotification.API/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
     "Database": "Server=localhost;Port=5434;Database=BidReadDb;User Id=postgres;Password=postgres;Include Error Detail=true"
-
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
   },
   "Logging": {
     "LogLevel": {
