--- a/src/Services/BiddingResult/BiddingResult.API/appsettings.json
+++ b/src/Services/BiddingResult/BiddingResult.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5433;Database=ContractDb;User Id=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Server=localhost;Port=5433;Database=Contract;User Id=postgres;Password=postgres;Include Error Detail=true"
   },
   "MessageBroker": {
     "Host": "amqp://localhost:5672",
